<resources>
    <string name="app_name">Gaquest-Poquest</string>
    <string name="bеgin_play">начать игру</string>
    <string name="level1_play">в бой!</string>
    <string name="krucio">круциатус</string>
    <string name="imperius">империус</string>
    <string name="adava_kedavra">адава кедавра</string>
    <string name="chit">оборонительное заклинание</string>
    <string name="choose_GG">выбрать Гермиону</string>
    <string name="choose_RY">выбрать Рона</string>
    <string name="choose_GP">Выбрать Гарри</string>
    <string name="germiona">Гермиона Грейнджер (сила - 70/100; усиления: круциатус - 3, адава кедавра - 5, империус - 4, оборонительное заклинание - 1; здоровье - 100/100;</string>
    <string name="dementor">Дементор (сила - 20/100; усиления(каждое уменьшает здоровье на 10): чует страх - 5, забирает эмоции - 5, превращается в человека - 5;) здоровье - 50/100;</string>
    <string name="vasilisk">Василиск (сила - 30/100; усиления(каждое уменьшает здоровье на 10): чует тебя - 5, забирает голову - 5, съедает и выплевывает тебя - 5;) здоровье - 50/100;</string>
    <string name="ambridg">Долотес Амбридж(сила - 30/100; усиления(каждое уменьшает здоровье на 10): душит тебя - 5, управляет тобой - 5, розовое все - 5;) здоровье - 60/100;</string>
    <string name="sneip">Северус Снейп (сила - 40/100; усиления(каждое уменьшает здоровье на 10): странное зелье - 5, забирает Дамблдора - 5, бросает предметы в тебя - 5;) здоровье - 60/100;</string>
    <string name="malfoy">Люциус Малфой (сила - 40/100; усиления(каждое уменьшает здоровье на 10): давит на жалость - 5, империо - 5, убивает Сириуса - 5;) здоровье - 70/100;</string>
    <string name="drako">Драко Малфой (сила - 50/100; усиления(каждое уменьшает здоровье на 10): обозвал тебя - 5, круцио - 5, съедает и выплевывает тебя - 5;) здоровье - 70/100;</string>
    <string name="dragon">Дракон (сила - 50/100; усиления(каждое уменьшает здоровье на 10): чует тебя - 5, плюет огнем - 5, съедает и выплевывает тебя - 5;) здоровье - 80/100;</string>
    <string name="krusa">крыса Рона (сила - 60/100; усиления(каждое уменьшает здоровье на 10): чует тебя - 5, забирает голову - 5, перевоплощение в человека - 5;) здоровье - 80/100;</string>
    <string name="tom_redll">Том Редлл (сила - 70/100; усиления(каждое уменьшает здоровье на 10): адава кедавра - 5, волшебный дневник - 5, заговаривает зубы - 5;) здоровье - 90/100;</string>
    <string name="narjissa">Нарцисса Малфой (сила - 80/100; усиления(каждое уменьшает здоровье на 10): околдавала тебя - 5, империо - 5, круцио - 5;) здоровье - 90/100;</string>
    <string name="volandemort">Волан-де-Морт (сила - 100/100; усиления(каждое уменьшает здоровье на 20): чует страх - 10, забирает эмоции - 10, адава кедавра - 10;) здоровье - 100/100;</string>
    <string name="ron">Рон Уизли (сила - 60/100; усиления: круциатус - 1, адава кедавра - 10, империус - 2, оборонительное заклинание - 3; здоровье - 100/100;</string>
    <string name="garry">Гарри Поттер (сила - 80/100; усиления: круциатус - 2, адава кедавра - 3, империус - 1, оборонительное заклинание - 5; здоровье - 100/100;</string>
    <string name="begin_text">Добро пожаловать в Хогвартс! Вам нужно пройти все уровни, сразиться с Тем-кого-нельзя-называть и забрать его волшебную палочку. Чтобы начать, выберите одного персонажа по своему усмотрению.</string>
    <string name="start_text">Привет, друг! Перед тем, как сразиться с Тем-кого-нельзя-называть, тебе придется пройти все уровни. В конце каждого уровня тебе будут даваться усиления, которые помогут тебе. Чтобы начать первый уровень, нажмите на кнопку.</string>
    <string name="finish_text">Ты победил Тома Редлла и получил +1 усиление круцио. Тебе осталось только победить Волан-де-Морта, и ты завершишь игру! нажми на кнопку, чтобы перейти на уровень боя с Волан-де-Мортом</string>
    <string name="end_text">Ты победил Волан-де-Морта, а значит, прошел всю игру! Нажми на кнопку, чтобы вернуться в начало.</string>
    <string name="level1_text">Вы находитесь в Главном зале. Сейчас происходит распределение факультетов. Вы с нетерпением ждете своей фамилии. Назвали ваше имя, вы подходите и на вас надевают Распределяющую Шляпу. Шляпа говорит, что вы в Гриффиндоре (+10 силы) и вы садитесь за стол к ребятам.Но вдруг в окно влетает дементор и начинает засасывать эмоции у учителей! Вы немедля хватаете свою новенькую волшебную палочку и готовитесь в бою.Чтобы начать бой, нажмите кнопку.</string>
    <string name="level2_text">За то, что вы победили дементора, Дамблдор наградил вас способностью сносить 15 единиц здоровья за 1 применение магии. В Хогвартсе пока все спокойно, но однажды вы натыкаетесь на загадочную дверь, ведущую в Тайную комнату. Ты и твои друзья заходите в комнату и видите огормного змея Василиска! Чтобы начать бой, нажмите на кнопку.</string>
    <string name="level3_text">Ты сразился с василиском, и тебе дали +1 усиление круциатус. Прошло некоторое время, и ты с друзьями начали подозревать Долотес Амбридж в службе Пожирателям Смерти. Чтобы начать бой, нажмите кнопку.</string>
    <string name="level4_text">Вы одержали победу над Амбридж и вам дали + 1 оборонительное заклинание, но вдруг появляется другая беда - Северус Снейп, который хочет убить Дамблдора.Чтобы начать бой, нажмите кнопку.</string>
    <string name="level5_text">Вы победили Северуса Снейпа и получили + 1 усиление империо, но в зале остался еще Драко - он обезоружил Дамблдора перед смертью.Чтобы начать бой, нажмите кнопку.</string>
    <string name="level6_text">Вы одежали победу над Драко и получили + 1 усиление адава кедабра. Спустя время вы узнаете о том, что ваш кресный Сириус Блек сбежал из Аскабана и ему грозит быть убитым Пожирателем Люциусом Малфоем.Чтобы начать бой, нажмите кнопку.</string>
    <string name="level7_text">Вы сразились с Люциусом и теперь можете сносить 20 единиц здоровья, но осталось разобраться с Драконом на истытании.Чтобы начать бой, нажмите кнопку.</string>
    <string name="level8_text">Вы победили Тома Редлла и получили + 1 усиление империо. Теперь нужно сразиться с крысой Рона, которая оказалась Пожирателем Смерти.Чтобы начать бой, нажмите кнопку.</string>
    <string name="level9_text">Вы разобрались с крысой ( +1 оборонительное заклинание) и вдруг на вас нападает Нарцисса Малфой, мать Драко.Чтобы начать бой, нажмите кнопку.</string>
    <string name="level10_text">Вы победили Нарциссу и получили + 1 усиление адава кедавра. К сожалению, тебя и твоих друзей выгнали из Хогвардса, так как там стал править Волан-Де-Морт, восставший из мертвых. Чтобы победить его, тебе нужно уничтожить Тома Редлла. Чтобы начать бой, нажмите кнопку.</string>

</resources>