<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/beginningLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bagin_textView"
        android:layout_width="290dp"
        android:layout_height="104dp"
        android:text="@string/begin_text"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_Garry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="garryButton"
        android:text="@string/choose_GP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/button_Germione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ronButton"
        android:text="@string/choose_RY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/button_Ron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="germiButton"
        android:text="@string/choose_GG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="391dp"
        android:layout_height="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/imge_ron_garry_germione" />

    <TextView
        android:id="@+id/textViewGermi"
        android:layout_width="108dp"
        android:layout_height="276dp"
        android:text="@string/germiona"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/textViewGarry"
        android:layout_width="110dp"
        android:layout_height="245dp"
        android:text="@string/garry"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <TextView
        android:id="@+id/textViewRon"
        android:layout_width="119dp"
        android:layout_height="263dp"
        android:text="@string/ron"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />
</androidx.constraintlayout.widget.ConstraintLayout>