<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/editbox_dropdown_light_frame"
    tools:context=".FightActivity">

    <TextView
        android:id="@+id/textViewDementor"
        android:layout_width="234dp"
        android:layout_height="218dp"
        android:text="@string/dementor"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/textViewHero"
        android:layout_width="208dp"
        android:layout_height="200dp"
        android:text="@string/garry"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="158dp"
        android:layout_height="217dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dementor" />

    <Button
        android:id="@+id/buttonAdavaKedavra"
        android:layout_width="107dp"
        android:layout_height="60dp"
        android:onClick="adavaKedavra"
        android:text="@string/adava_kedavra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/buttonImperio"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:onClick="imperius"
        android:text="@string/imperius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/buttonKrucio"
        android:layout_width="114dp"
        android:layout_height="55dp"
        android:onClick="krucio"
        android:text="@string/krucio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="191dp"
        android:layout_height="197dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        app:srcCompat="@drawable/garry_fight" />

    <TextView
        android:id="@+id/textViewFight"
        android:layout_width="396dp"
        android:layout_height="165dp"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <Button
        android:id="@+id/buttonChit"
        android:layout_width="337dp"
        android:layout_height="56dp"
        android:onClick="chit"
        android:text="@string/chit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

</androidx.constraintlayout.widget.ConstraintLayout>